--- a/css/admin/dashboard.css
+++ b/css/admin/dashboard.css
@@ -1,38 +1,37 @@
 .order-card {
-    color: #fff;
+ color: #fff;
 }
 
 .bg-c-blue {
-    background: linear-gradient(45deg,#4099ff,#73b4ff);
+ background: linear-gradient(45deg, #4099ff, #73b4ff);
 }
 
 .bg-c-green {
-    background: linear-gradient(45deg,#2ed8b6,#59e0c5);
+ background: linear-gradient(45deg, #2ed8b6, #59e0c5);
 }
 
 .bg-c-yellow {
-    background: linear-gradient(45deg,#FFB64D,#ffcb80);
+ background: linear-gradient(45deg, #ffb64d, #ffcb80);
 }
 
 .bg-c-pink {
-    background: linear-gradient(45deg,#FF5370,#ff869a);
+ background: linear-gradient(45deg, #ff5370, #ff869a);
 }
 
-
 .card {
-    border-radius: 10px;
-    -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
-    box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
-    border: none;
-    margin-bottom: 30px;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
+ border-radius: 10px;
+ -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.05);
+ box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.05);
+ border: none;
+ margin-bottom: 30px;
+ -webkit-transition: all 0.3s ease-in-out;
+ transition: all 0.3s ease-in-out;
 }
 
 .card .card-block {
-    padding: 25px;
+ padding: 25px;
 }
 
 .order-card i {
-    font-size: 25px;
+ font-size: 25px;
 }
